backend-microservices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soonshop
  labels:
    name: soonshop
    app: soonshop-backend
